Add bogie track probing, currently only accessible from CC